CMake: Fix examples built as external projects
Usage of a private module needs a respective find_package call now.

Pick-to: 6.9
Task-number: QTBUG-87776
Change-Id: I3a00a241c5e8637d28606c1f45a843b491c0a8bc
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/corelib/platform/androidnotifier/CMakeLists.txt
+++ b/examples/corelib/platform/androidnotifier/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT ANDROID)
     message(FATAL_ERROR "Example only works on Android")
 endif()
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Widgets CorePrivate)
 
 qt_standard_project_setup()
 
