--- a/examples/gui/rhiwindow/CMakeLists.txt
+++ b/examples/gui/rhiwindow/CMakeLists.txt
@@ -4,7 +4,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(rhiwindow LANGUAGES CXX)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui)
+find_package(Qt6 REQUIRED COMPONENTS Core GuiPrivate)
 
 qt_standard_project_setup()
 
